@@ -53,6 +53,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
 import|;
 end_import
@@ -1320,7 +1330,7 @@ operator|-
 literal|1
 decl_stmt|;
 name|long
-name|minSeqId
+name|minSeqIdToRecover
 init|=
 name|Integer
 operator|.
@@ -1392,16 +1402,24 @@ operator|=
 name|storeSeqId
 expr_stmt|;
 block|}
+name|long
+name|storeSeqIdBeforeRecovery
+init|=
+name|store
+operator|.
+name|getMaxSeqIdBeforeLogRecovery
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
-name|storeSeqId
+name|storeSeqIdBeforeRecovery
 operator|<
-name|minSeqId
+name|minSeqIdToRecover
 condition|)
 block|{
-name|minSeqId
+name|minSeqIdToRecover
 operator|=
-name|storeSeqId
+name|storeSeqIdBeforeRecovery
 expr_stmt|;
 block|}
 block|}
@@ -1410,7 +1428,7 @@ name|doReconstructionLog
 argument_list|(
 name|oldLogFile
 argument_list|,
-name|minSeqId
+name|minSeqIdToRecover
 argument_list|,
 name|maxSeqId
 argument_list|,
@@ -4406,48 +4424,6 @@ argument_list|()
 expr_stmt|;
 try|try
 block|{
-if|if
-condition|(
-name|writeToWAL
-condition|)
-block|{
-name|this
-operator|.
-name|log
-operator|.
-name|append
-argument_list|(
-name|regionInfo
-operator|.
-name|getRegionName
-argument_list|()
-argument_list|,
-name|regionInfo
-operator|.
-name|getTableDesc
-argument_list|()
-operator|.
-name|getName
-argument_list|()
-argument_list|,
-name|kvs
-argument_list|,
-operator|(
-name|regionInfo
-operator|.
-name|isMetaRegion
-argument_list|()
-operator|||
-name|regionInfo
-operator|.
-name|isRootRegion
-argument_list|()
-operator|)
-argument_list|,
-name|now
-argument_list|)
-expr_stmt|;
-block|}
 name|long
 name|size
 init|=
@@ -4461,14 +4437,33 @@ argument_list|(
 name|family
 argument_list|)
 decl_stmt|;
-for|for
-control|(
+name|Iterator
+argument_list|<
+name|KeyValue
+argument_list|>
+name|kvIterator
+init|=
+name|kvs
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+name|kvIterator
+operator|.
+name|hasNext
+argument_list|()
+condition|)
+block|{
 name|KeyValue
 name|kv
-range|:
-name|kvs
-control|)
-block|{
+init|=
+name|kvIterator
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
 comment|// Check if time is LATEST, change to time of most recent addition if so
 comment|// This is expensive.
 if|if
@@ -4578,6 +4573,11 @@ argument_list|()
 condition|)
 block|{
 comment|// Nothing to delete
+name|kvIterator
+operator|.
+name|remove
+argument_list|()
+expr_stmt|;
 continue|continue;
 block|}
 if|if
@@ -4653,6 +4653,9 @@ name|byteNow
 argument_list|)
 expr_stmt|;
 block|}
+comment|// We must do this in this loop because it could affect
+comment|// the above get to find the next timestamp to remove.
+comment|// This is the case when there are multiple deletes for the same column.
 name|size
 operator|=
 name|this
@@ -4667,6 +4670,48 @@ name|delete
 argument_list|(
 name|kv
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|writeToWAL
+condition|)
+block|{
+name|this
+operator|.
+name|log
+operator|.
+name|append
+argument_list|(
+name|regionInfo
+operator|.
+name|getRegionName
+argument_list|()
+argument_list|,
+name|regionInfo
+operator|.
+name|getTableDesc
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|kvs
+argument_list|,
+operator|(
+name|regionInfo
+operator|.
+name|isMetaRegion
+argument_list|()
+operator|||
+name|regionInfo
+operator|.
+name|isRootRegion
+argument_list|()
+operator|)
+argument_list|,
+name|now
 argument_list|)
 expr_stmt|;
 block|}
